# mavro-pro-ai-marketing-os

./: .env.example  .gitignore  ARCHITECTURE_MIGRATION_PLAN.md  CHATGPT_ANALYSIS_INSTRUCTIONS.md  CHATGPT_ANALYSIS_PROMPT.md  CHATGPT_CODEBASE_REVIEW.md  CHATGPT_CODE_SAMPLES.md  CHATGPT_FULL_ARCHITECTURE.md  CODEBASE_ANALYSIS_EXPORT.md  COMPLETE_CODEBASE_EXPORT.md  COMPLETE_MAVRO_PRO_EXPORT.md  COMPLETE_UI_UX_APPLICATION_EXPORT.md  COMPLETE_UI_UX_CODEBASE_BREAKDOWN.md  COMPLETE_UI_UX_CODEBASE_EXPORT.md  COMPLETE_UX_CODEBASE_EXPORT.md  DEPLOYMENT_CHECKLIST.md  DOWNLOAD_INSTRUCTIONS.md  EFFICIENCY_REPORT.md  FORK-INSTRUCTIONS.md  FRONTEND_CODE_EXPORT.md  GITHUB_CONNECTION_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  HOW-TO-DUPLICATE-APP.md  MAVRO-BUCKET-UPLOAD-GUIDE.md  MAVRO_PRO_COLOR_PALETTE.md  MAVRO_PRO_CSS_EXPORT.css  MAVRO_PRO_UI_EXPORT.html  PRODUCTION-DEPLOYMENT-GUIDE.md  README.md  README_SAAS_MVP.md  SAAS_MVP_SUMMARY.md  SOURCE_CODE_DOWNLOAD.md  SWOT_ANALYSIS_FINAL.md  UI-UX-EXPORT-SUMMARY.md  ULTIMATE_MAVRO_PRO_PLATFORM_EXPORT.md  VIVI-AI-INTEGRATION-ANALYSIS.md  VIVI-AI-INTEGRATION-GUIDE.md  VIVI_CODEBASE_EXPORT.md  build-production.sh  clear_tokens.js  (+15 more)
attached_assets/: AgentPackInstaller_1753140579534.ts  AgentPackSelector_1752978975864.tsx  AgentStore_1753140579534.tsx  App_WithNotifications_1753563288814.jsx  (+95 more)
vivi-backend/: .env  pyproject.toml  vivi_app.db
vivi-backend/app/: auth.py  database.py  main.py  models.py
vivi-backend/app/vivi_agent/: ViViAgentEnhanced.ts  agent.py
vivi-backend/app/vivi_agent/plugins/: scraping_plugins.ts  seoplugin.ts
(+321 files in other folders)
